public/css/dashboard.css
@layer normalize, block, element, mod, adaptive;

@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap");

body {
	background-color: var(--color-white);
}

:root {
	--color-white: #ffffff;
	--color-black: #000;
	--color-grey: rgba(0, 0, 0, 0.7);
	--color-grey-2: rgba(0, 0, 0, 0.3);
	--color-lighter: rgba(255, 255, 255, 0.7);

	--color-primary: #0d6efd;
	--color-light: #ced4da;

	--color-background: #efeff4;
	--color-background-dark: #212529;

	--color-blue-lighter: #e1f3fc;
	--color-blue-light: #008be1;
	--color-blue-dark: #0068bc;

	--color-yellow-light: #fff8e3;
	--color-yellow-dark: #ffbf35;

	--color-purple-light: #5b39ad;
	--color-purple-dark: #402b9c;

	--color-success: #00801b;
	--color-warning: #f51b2a;

	--spacing-1: 8px;
	--spacing-2: 12px;
	--spacing-3: 16px;
	--spacing-4: 20px;
	--spacing-5: 24px;
	--spacing-6: 28px;
	--spacing-7: 32px;
	--spacing-8: 36px;
	--spacing-9: 40px;

	--size-1: 14px;
	--size-2: 16px;
	--size-3: 20px;
	--size-4: 24px;
	--size-5: 28px;
	--size-6: 32px;

	--radius-1: 4px;

	--opacity-1: 0.7;
	--opacity-2: 0.3;

	--transition-1: 0.7s;

	--line-height: 1.5em;
}

@layer block {
	.page {
		background-color: var(--color-background);
		width: 100%;
		min-height: 100vh;
	}

	.main {
		padding: var(--spacing-9);
		display: grid;
		gap: var(--spacing-9);
	}

	.vertical {
		display: grid;
		gap: var(--spacing-5);
	}

	.aside {
		padding: var(--spacing-5);
		background-color: var(--color-background-dark);
		align-content: flex-start;
	}

	.icon {
		display: block;
		background-repeat: no-repeat;
		background-position: center center;
	}

	.nav-button {
		display: flex;
		align-items: center;
		gap: var(--spacing-1);
		text-decoration: none;
		padding: var(--spacing-2);
		border-radius: var(--radius-1);
	}

	.text {
		font-family: "Roboto", sans-serif;
		color: var(--color-black);
		font-size: var(--size-2);
	}

	.click {
		transition: opacity var(--transition-1);
		cursor: pointer;
	}

	.click:hover {
		opacity: var(--opacity-1);
	}

	.click:active {
		opacity: var(--opacity-2);
	}

	.header {
		background-color: var(--color-white);
		padding: var(--size-1);
	}

	.layout {
		width: 100%;
		max-width: 1300px;
		margin: 0 auto;
	}

	.field {
		min-height: 36px;
		border: 1px solid var(--color-light);
		padding: 0 var(--spacing-2);
		border-radius: var(--radius-1);
	}

	.box {
		background-color: var(--color-white);
		padding: var(--spacing-5);
		border-radius: 16px;
	}

	.analytic {
		border-radius: 8px;
		padding: var(--spacing-5);
		display: flex;
		flex-direction: column;
		flex-wrap: wrap;
		justify-content: space-between;
		align-items: flex-start;
	}

	.relative {
		position: relative;
	}
}

@layer element {
	.page__aside {
		grid-row: 1 / 3;
	}

	.aside__logo {
		color: var(--color-white);
		font-size: var(--size-4);
		padding-bottom: var(--spacing-4);
		border-bottom: 1px solid rgba(255, 255, 255, 0.25);
	}

	.nav-button__icon {
		height: 16px;
		width: 16px;
	}

	.header__content {
		display: flex;
		align-items: center;
		justify-content: space-between;
	}

	.header__search {
		width: 100%;
		max-width: 30%;
		min-width: 180px;
		background-color: #f8fafc;
	}

	.header__icon-search {
		height: 20px;
		width: 20px;
		position: absolute;
		top: calc(50% - (20px / 2));
		left: var(--spacing-2);
	}

	.icon--header-settings {
		height: 28px;
		width: 28px;
		position: absolute;
		top: calc(50% - (28px / 2));
		right: var(--spacing-2);
	}

	.icon--input-settings {
		height: 12px;
		width: 12px;
		position: absolute;
		top: calc(50% - (12px / 2));
		right: var(--spacing-2);
	}

	.field__select {
		position: absolute;
		width: 100%;
		height: 100%;
		top: 0;
		left: 0;
		opacity: 0;
		cursor: pointer;
	}

	.analytic__block {
		display: grid;
		grid-template-columns: repeat(3, 1fr);
		grid-template-rows: 1fr 1fr;
		gap: var(--spacing-5);
	}

	.analytic__button {
		height: 44px;
		width: 44px;
	}

	.analytic__title {
		font-size: var(--size-6);
	}

	.list__title {
		font-size: var(--size-4);
	}

	.analytic__arrow {
		width: var(--size-3);
		height: var(--size-3);
		position: absolute;
		top: 0;
		left: calc(100% + var(--spacing-1));
	}

	.header__icon-group {
		display: flex;
		gap: var(--spacing-4);
		padding-right: var(--spacing-1);
	}

	.divider {
		margin-top: var(--spacing-5);
		margin-bottom: var(--spacing-5);
		border: 1px solid var(--color-light);
	}

	.list__block {
		display: grid;
		grid-template-columns: repeat(4, 1fr);
		grid-template-rows: 1fr;
		gap: var(--spacing-5);
	}

	.payment__block {
		display: grid;
		grid-template-columns: 1fr 1fr;
		grid-template-rows: 2fr;
		gap: var(--spacing-5);
	}

	.main__list-payment {
		display: grid;
		width: 100%;
		max-width: 1300px;
		grid-template-columns: 1fr 450px;
		gap: var(--spacing-9);
	}

	/* Radio button */
	.container {
		display: block;
		position: relative;
		padding-left: 24px;
		margin-bottom: 12px;
		cursor: pointer;
		-webkit-user-select: none;
		-moz-user-select: none;
		-ms-user-select: none;
		user-select: none;
	}

	.container input {
		position: absolute;
		opacity: 0;
		cursor: pointer;
	}

	.checkmark {
		position: absolute;
		top: 0;
		left: 0;
		height: 16px;
		width: 16px;
		background-color: var(--color-white);
		border-radius: 50%;
		border: 1px solid rgba(0, 0, 0, 0.25);
	}

	.container:hover input ~ .checkmark {
		background-color: #ccc;
	}

	.container input:checked ~ .checkmark {
		background-color: #0d6efd;
		border: 1px solid #0d6efd;
	}

	.checkmark:after {
		content: "";
		position: absolute;
		display: none;
	}

	.container input:checked ~ .checkmark:after {
		display: block;
	}

	.container .checkmark:after {
		top: 25%;
		left: 25%;
		width: 7px;
		height: 7px;
		border-radius: 50%;
		background: var(--color-white);
	}
	/* ---------------- */
}

@layer mod {
	.page--dashboard {
		display: grid;
		grid-template-columns: 280px 1fr;
		grid-template-rows: min-content 1fr;
	}

	.text--light {
		color: var(--color-white);
	}

	.text--heading {
		font-size: var(--size-4);
		color: var(--color-background-dark);
		font-weight: 500;
	}

	.text--small {
		font-size: var(--size-1);
	}

	.text--grey {
		color: var(--color-grey);
	}

	.text--lighter {
		color: var(--color-lighter);
	}

	.text--line {
		line-height: var(--line-height);
	}

	.text--bold {
		font-weight: 600;
	}

	.vertical--small {
		gap: var(--spacing-2);
	}

	/* .vertical--big {
		gap: var(--spacing-5);
	} */

	.nav-button--active:hover {
		background: var(--color-grey-2);
	}

	.nav-button--active:focus {
		background: var(--color-primary);
	}

	.field--header {
		padding-left: 44px;
		padding-right: 44px;
		width: 100%;
		height: 52px;
	}

	.field--header::placeholder {
		color: #bdbdbd;
	}

	.icon--button {
		border-radius: var(--radius-1);
	}

	.field--select {
		display: flex;
		align-items: center;
	}

	.analytic--double {
		grid-row: 1 / 3;
	}

	.analytic--blue {
		background-color: var(--color-blue-light);
	}

	.analytic--purple {
		background-color: var(--color-purple-light);
	}

	.analytic--light {
		background-color: var(--color-white);
	}

	.icon--color-blue {
		background-color: var(--color-blue-dark);
	}

	.icon--color-purple {
		background-color: var(--color-purple-dark);
	}

	.icon--color-yellow-light {
		background-color: var(--color-yellow-light);
	}

	.icon--color-blue-lighter {
		background-color: var(--color-blue-lighter);
	}

	.text--black {
		color: var(--color-black);
	}

	.border--mod {
		border: 1px solid #e0e4e8;
	}

	.analytic--mod {
		border-radius: 8px;
		padding: var(--spacing-5);
		gap: var(--spacing-2);
		display: flex;
		flex-direction: row;
		flex-wrap: wrap;
		justify-content: flex-start;
	}

	.text--size-mod {
		font-size: var(--size-3);
	}

	.icon--header {
		height: 32px;
		width: 32px;
	}

	.margin-top {
		margin-top: var(--spacing-9);
	}

	.margin-bottom {
		margin-bottom: var(--spacing-2);
	}

	.margin-bottom-medium {
		margin-bottom: var(--spacing-5);
	}

	.list-red {
		color: var(--color-warning);
	}

	.list-green {
		color: var(--color-success);
	}

	.min-height {
		height: min-content;
	}

	.input-width {
		max-width: 189px;
		min-width: 120px;
	}

	.color-dark {
		color: var(--color-background-dark);
	}

	.padding-top-medium {
		padding-top: var(--spacing-2);
	}

	.padding-bottom-small {
		padding-bottom: var(--spacing-2);
	}

	.button-payment {
		width: 100%;
		max-width: 402px;
		justify-content: center;
		background-color: var(--color-primary);
	}
}

@layer adaptive {
	@media all and (width <= 1560px) {
		.list__block {
			grid-template-columns: 1fr 1fr;
			grid-template-rows: 1fr 1fr;
		}
	}

	@media all and (width <= 1300px) {
		.analytic__block {
			grid-template-columns: 1fr 1fr;
			grid-template-rows: 1fr 1fr;
		}

		.analytic__button {
			margin-bottom: var(--spacing-4);
		}

		.analytic--mod {
			flex-direction: column;
			justify-content: space-between;
			align-items: flex-start;
		}

		.text--size-mod {
			font-size: var(--size-6);
		}

		.analytic--double {
			grid-row: unset;
		}

		.layout {
			min-width: 500px;
		}

		.list__block {
			grid-template-columns: 1fr;
			grid-template-rows: repeat(4, 1fr);
		}
	}

	@media all and (width <= 1060px) {
		.page--dashboard {
			grid-template-columns: 1fr;
		}

		.aside {
			display: none;
		}

		.header {
			display: none;
		}

		.analytic--double {
			grid-row: unset;
		}

		.min-height {
			min-width: 190px;
		}
	}

	@media all and (width <= 770px) {
		.payment__block {
			grid-template-columns: 1fr;
			grid-template-rows: unset;
		}

		.input-width {
			max-width: 402px;
		}

		.main__list-payment {
			display: grid;
			width: 100%;
			max-width: 1300px;
			grid-template-columns: 1fr;
			grid-template-rows: min-content min-content;
			gap: var(--spacing-9);
		}
	}

	@media all and (width <= 600px) {
		.analytic__block {
			grid-template-columns: 1fr;
			grid-template-rows: repeat(4, 1fr);
		}

		.analytic__button {
			margin-bottom: var(--spacing-4);
		}

		.analytic--mod {
			flex-direction: column;
			justify-content: space-between;
			align-items: flex-start;
		}

		.text--size-mod {
			font-size: var(--size-6);
		}

		.analytic--double {
			grid-row: unset;
		}

		.layout {
			min-width: 210px;
		}

		.analytic__block {
			min-width: 190px;
		}
	}

	@media all and (width <= 350px) {
		.input-width {
			width: 142px;
		}

		.button-payment {
			width: 142px;
		}
	}
}

